--- a/src/app/pages/beneficiaire-bloc/beneficiaire-bloc.page.html
+++ b/src/app/pages/beneficiaire-bloc/beneficiaire-bloc.page.html
@@ -1,9 +1,13 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>beneficiaire-bloc</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <p>Region : {{region.nom_reg}}</p>
+  <p>District : {{district.nom_dist}}</p>
 </ion-content>
