--- a/src/app/pages/beneficiaire/beneficiaire.page.html
+++ b/src/app/pages/beneficiaire/beneficiaire.page.html
@@ -3,55 +3,300 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Identification de Beneficiaire</ion-title>
+      <mat-grid-list cols="4" rowHeight="60px">
+        <mat-grid-tile colspan="4" rowspan="1" style.background = "lightgreen">
+           Projet: 
+        </mat-grid-tile>
+        <mat-grid-tile colspan="1" rowspan="1" style.background = "lightblue">
+          Region: {{region.nom_reg}}
+        </mat-grid-tile>
+        <mat-grid-tile colspan="1" rowspan="1" style.background = "#DDBDF1">
+           District: {{district.nom_dist}}
+        </mat-grid-tile>
+        <mat-grid-tile colspan="2" rowspan="1" style.background = "lightpink">
+           Commune: {{commune.nom_com}}
+        </mat-grid-tile>
+      </mat-grid-list> 
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+  <div class="ion-text-center ion-text-wrap">
+    Identification de Beneficiaire
+  </div>
   <!-- visualiser liste beneficiaire -->
   <mat-tab-group mat-align-tabs="start">
-    <mat-tab label="Liste">
-        <p>Region : {{region.nom_reg}}</p>
-        <p>District : {{district.nom_dist}}</p>
-        <p>Commune : {{commune.nom_com}}</p>
-        <p>************</p>
+    <mat-tab label="Associaton">
         <mat-form-field appearance="standard">
           <mat-label>Filtre</mat-label>
           <input matInput (keyup)="applyFilter($event)" placeholder="Merci de tapez ici votre mot" #input>
         </mat-form-field>
+
+
         
-        <div class="mat-elevation-z8">
+        <div class="example-container mat-elevation-z8">
           <table mat-table [dataSource]="dataSource" matSort>
         
-            <!-- ID Column -->
+            <!-- ID Column 
             <ng-container matColumnDef="code">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
               <td mat-cell *matCellDef="let row"> {{row.code_reg}} </td>
-            </ng-container>
+            </ng-container>-->
         
         
-            <!-- Name Column -->
+            <!-- Name Column 
             <ng-container matColumnDef="nom">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Region </th>
               <td mat-cell *matCellDef="let row"> {{row.nom_reg}} </td>
+            </ng-container>-->
+
+            <!-- Fokontany Column -->
+            <ng-container matColumnDef="fokontany" sticky>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Fokontany </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom_fkt}} </td>
+            </ng-container>
+
+            <!-- Association Column -->
+            <ng-container matColumnDef="association" sticky>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Association </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom_ass}} </td>
+            </ng-container>
+
+            <!-- Code PA Column -->
+            <ng-container matColumnDef="code_benef">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> code PA </th>
+              <td mat-cell *matCellDef="let row"> {{row.id_pms}} </td>
+            </ng-container>
+
+            <!-- Nom PA Column -->
+            <ng-container matColumnDef="pa">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom PA </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom_benf}} </td>
+            </ng-container>
+
+            <!-- Sexe PA Column -->
+            <ng-container matColumnDef="sexe">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Sexe </th>
+              <td mat-cell *matCellDef="let row"> {{row.sexe}} </td>
+            </ng-container>
+
+            <!-- cin PA Column -->
+            <ng-container matColumnDef="cin">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Cin </th>
+              <td mat-cell *matCellDef="let row"> {{row.cin}} </td>
+            </ng-container>
+
+            <!-- surnom PA Column -->
+            <ng-container matColumnDef="surnom">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Surnom </th>
+              <td mat-cell *matCellDef="let row"> {{row.surnom}} </td>
+            </ng-container>
+
+            <!-- Nombre PMS Column -->
+            <ng-container matColumnDef="nb_pms">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Nbre_pms </th>
+              <td mat-cell *matCellDef="let row"> 0 </td>
+            </ng-container>
+
+            <!-- Technicien Responsable Column -->
+            <ng-container matColumnDef="technicien">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Technicien </th>
+              <td mat-cell *matCellDef="let row"> {{row.id_tech}} </td>
             </ng-container>
         
-        
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClicked(row)"></tr>
         
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
-              <td class="mat-cell" colspan="4">Aucun données trouver "{{input.value}}"</td>
+              <td class="mat-cell" colspan="4">Aucun enregistrement"</td>
             </tr>
           </table>
         
-          <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+          <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users" sticky></mat-paginator>
         </div>        
 
     </mat-tab>
-    <mat-tab label="Ajout">
-      <h1>En attente</h1>
+    <mat-tab label="Beneficiaire(PMS)">
+      <h1>Liste des bénéficiaires</h1>
+      <div class="example-container mat-elevation-z8">
+
+        <div class="demo-button-container">
+          <button mat-raised-button (click)="addData()" class="demo-button">
+            Modification
+          </button>
+        </div>
+
+        <table mat-table [dataSource]="dataSourceBenef" matSort>
+
+          <!-- Fokontany Column -->
+          <ng-container matColumnDef="fokontany" sticky>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fokontany </th>
+            <td mat-cell *matCellDef="let row"> {{row.fokontany}} </td>
+          </ng-container>
+
+          <!-- Association Column -->
+          <ng-container matColumnDef="association" sticky>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Association </th>
+            <td mat-cell *matCellDef="let row"> {{row.association}} </td>
+          </ng-container>
+
+          <!-- Code PA Column -->
+          <ng-container matColumnDef="code_pms">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> code PMS </th>
+            <td mat-cell *matCellDef="let row"> {{row.code_pms}} </td>
+          </ng-container>
+
+          <!-- Nom PA Column -->
+          <ng-container matColumnDef="pms">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom PMS </th>
+            <td mat-cell *matCellDef="let row"> {{row.pms}} </td>
+          </ng-container>
+
+          <!-- Sexe PA Column -->
+          <ng-container matColumnDef="sexe">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Sexe </th>
+            <td mat-cell *matCellDef="let row"> {{row.sexe}} </td>
+          </ng-container>
+
+          <!-- cin PA Column -->
+          <ng-container matColumnDef="age">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Age </th>
+            <td mat-cell *matCellDef="let row"> {{row.age}} </td>
+          </ng-container>
+
+          <!-- cin PA Column -->
+          <ng-container matColumnDef="cin">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Cin </th>
+            <td mat-cell *matCellDef="let row"> {{row.cin}} </td>
+          </ng-container>
+
+          <!-- village PA Column -->
+          <ng-container matColumnDef="village">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> résidence </th>
+            <td mat-cell *matCellDef="let row"> {{row.village}} </td>
+          </ng-container>
+
+          <!-- village PA Column -->
+          <ng-container matColumnDef="commune">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> commune </th>
+            <td mat-cell *matCellDef="let row"> {{row.surnom}} </td>
+          </ng-container>
+
+          <!-- village PA Column -->
+          <ng-container matColumnDef="role">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> type </th>
+            <td mat-cell *matCellDef="let row"> {{row.role}} </td>
+          </ng-container>
+
+          <!-- Nombre PMS Column -->
+          <ng-container matColumnDef="nb_parcelle">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> nb_parcelle </th>
+            <td mat-cell *matCellDef="let row"> {{row.nb_parcelle}} </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsBenef"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsBenef;" (click)="onRowClickedBenef(row)"></tr>
+      
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">Aucun enregistrement"</td>
+          </tr>
+        </table>
+      
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users" sticky></mat-paginator>
+      </div>  
+    </mat-tab>
+    <mat-tab label="Parcelle">
+      <h1>Liste des bénéficiaires</h1>
+      <div class="example-container mat-elevation-z8">
+
+        <div class="demo-button-container">
+          <button mat-raised-button (click)="addData()" class="demo-button">
+            Modification
+          </button>
+        </div>
+
+        <table mat-table [dataSource]="dataSourceBenef" matSort>
+
+          <!-- Fokontany Column -->
+          <ng-container matColumnDef="fokontany" sticky>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fokontany </th>
+            <td mat-cell *matCellDef="let row"> {{row.fokontany}} </td>
+          </ng-container>
+
+          <!-- Association Column -->
+          <ng-container matColumnDef="association" sticky>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Association </th>
+            <td mat-cell *matCellDef="let row"> {{row.association}} </td>
+          </ng-container>
+
+          <!-- Code PA Column -->
+          <ng-container matColumnDef="code_pms">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> code PMS </th>
+            <td mat-cell *matCellDef="let row"> {{row.code_pms}} </td>
+          </ng-container>
+
+          <!-- Nom PA Column -->
+          <ng-container matColumnDef="pms">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom PMS </th>
+            <td mat-cell *matCellDef="let row"> {{row.pms}} </td>
+          </ng-container>
+
+          <!-- Sexe PA Column -->
+          <ng-container matColumnDef="sexe">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Sexe </th>
+            <td mat-cell *matCellDef="let row"> {{row.sexe}} </td>
+          </ng-container>
+
+          <!-- cin PA Column -->
+          <ng-container matColumnDef="age">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Age </th>
+            <td mat-cell *matCellDef="let row"> {{row.age}} </td>
+          </ng-container>
+
+          <!-- cin PA Column -->
+          <ng-container matColumnDef="cin">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Cin </th>
+            <td mat-cell *matCellDef="let row"> {{row.cin}} </td>
+          </ng-container>
+
+          <!-- village PA Column -->
+          <ng-container matColumnDef="village">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> résidence </th>
+            <td mat-cell *matCellDef="let row"> {{row.village}} </td>
+          </ng-container>
+
+          <!-- village PA Column -->
+          <ng-container matColumnDef="commune">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> commune </th>
+            <td mat-cell *matCellDef="let row"> {{row.surnom}} </td>
+          </ng-container>
+
+          <!-- village PA Column -->
+          <ng-container matColumnDef="role">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> type </th>
+            <td mat-cell *matCellDef="let row"> {{row.role}} </td>
+          </ng-container>
+
+          <!-- Nombre PMS Column -->
+          <ng-container matColumnDef="nb_parcelle">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> nb_parcelle </th>
+            <td mat-cell *matCellDef="let row"> {{row.nb_parcelle}} </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsBenef"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsBenef;" (click)="onRowClickedBenef(row)"></tr>
+      
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">Aucun enregistrement"</td>
+          </tr>
+        </table>
+      
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users" sticky></mat-paginator>
+      </div>  
     </mat-tab>
   </mat-tab-group>
 </ion-content>
