--- a/src/app/pages/modal/modal.page.html
+++ b/src/app/pages/modal/modal.page.html
@@ -66,7 +66,7 @@
              </mat-list>              
             </mat-card-content>
             <mat-card-actions fxLayoutAlign="center center" fxFlexFill>
-              <button *ngIf="isHome" mat-button (click)="closeModal()" color="warning">Revenir</button>
+              <button *ngIf="isHome" mat-button (click)="revenirModal()" color="warning">Revenir</button>
               <button *ngIf="isHome" mat-raised-button color="primary" type="submit" (click)="closeModal()">valider</button>                
               <button *ngIf="isLogin" mat-raised-button color="primary" type="submit" (click)="importData()">importer</button>   
             </mat-card-actions>
