--- a/src/app/pages/suivi/suivi.page.html
+++ b/src/app/pages/suivi/suivi.page.html
@@ -1,6 +1,16 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>carnet de suivi</ion-title>
+    <mat-grid-list cols="4" rowHeight="60px">
+      <mat-grid-tile colspan="4" rowspan="1" style.background = "lightgreen">
+         Projet: 
+      </mat-grid-tile>
+      <mat-grid-tile colspan="1" rowspan="1" style.background = "lightblue">
+        Region: {{region.nom_reg}}
+      </mat-grid-tile>
+      <mat-grid-tile colspan="1" rowspan="1" style.background = "#DDBDF1">
+         District: {{district.nom_dist}}
+      </mat-grid-tile>
+    </mat-grid-list> 
     <ion-buttons slot="start">
       <ion-menu-button autoHide="false"></ion-menu-button>
     </ion-buttons>
@@ -8,5 +18,16 @@
 </ion-header>
 
 <ion-content>
-  <h1>En attente .........</h1>
+  <div class="ion-text-center ion-text-wrap">
+    Identification de Beneficiaire
+  </div>
+  <!-- visualiser liste beneficiaire -->
+  <mat-tab-group mat-align-tabs="start">
+    <mat-tab label="Cultures">  
+      <p>cultures</p> 
+    </mat-tab>
+    <mat-tab label="suivi">
+      <p>suivi</p>
+    </mat-tab>
+  </mat-tab-group>
 </ion-content>
