--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -2,7 +2,7 @@
   <ion-menu side="start" menuId="first" contentId="main-content">
     <ion-header>
       <ion-toolbar color="primary">
-        <ion-title> {{ activite.description }} </ion-title>
+        <ion-title>Projet <!--{{projet.nom}}--> </ion-title>
       </ion-toolbar>
     </ion-header>
     <ion-content>
