--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -10,9 +10,9 @@
   .ion-text-wrap {
     color:whitesmoke;
   }
-  ion-toolbar {
+  /**ion-toolbar {
     --background: rgb(12, 92, 52);
-  }
+  }*/
   ion-thumbnail {
     --border-radius: 20px;
     --size: 60px;
@@ -23,14 +23,11 @@
     background-size: cover;
     background-color: aliceblue;
   }
-  .form-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center left;
-    margin-top: 15px;
 
+  .flex-container {
     .mat-form-field {
-      max-width: 600px
+      width: 500px;
+      min-width: 200px;
     }
   }
  .mat-card-header{
@@ -38,6 +35,22 @@
     color: aliceblue;
     padding:0 !important;
   }
-  ::ng-deep .mat-card{
-    background-color:rgb(228, 248, 238) !important;
+
+  /**
+* mat-form-field outline appareance
+*/
+::ng-deep {
+  .mat-form-field-appearance-outline .mat-form-field-infix {
+      padding: .75em 0 0.15em 0;
   }
+  
+  .mat-form-field-appearance-outline .mat-form-field-wrapper {
+      margin: 0 0;
+      padding-bottom: 0;
+  }
+}
+
+::ng-deep .mat-card{
+  background-color:rgb(228, 248, 238) !important;
+}
+
