--- a/src/app/pages/beneficiaire-bloc/beneficiaire-bloc.page.html
+++ b/src/app/pages/beneficiaire-bloc/beneficiaire-bloc.page.html
@@ -22,15 +22,372 @@
     Identification de Beneficiaire
   </div>
   <!-- visualiser liste beneficiaire -->
-  <mat-tab-group mat-align-tabs="start">
+  <mat-tab-group mat-align-tabs="start" (selectedIndexChange)="selectMatTab($event)">
     <mat-tab label="Bloc">  
-      Liste bloc Bloc
+      <h3>Liste Bloc</h3>
+      <div class="container-matTab mat-elevation-z8">
+
+        <div class="demo-button-container">
+          <mat-form-field>
+            <mat-label>Filtre</mat-label>
+            <mat-select [(ngModel)]="selectedBloc" (ngModelChange)="applyFilterSelect($event, 'bloc')">
+              <mat-option (click)="applyFilterTout('bloc')" [value]="">tout</mat-option>
+              <mat-option *ngFor="let bloc of filterDataBloc" [value]="bloc">
+                {{ bloc }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="table-container">
+          <table mat-table [dataSource]="dataSource" matSort #blocSort="matSort">
+
+            <!-- Code Bloc Column -->
+            <ng-container matColumnDef="code_bloc">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> code_bloc </th>
+              <td mat-cell *matCellDef="let row"> {{row.code_bloc}} </td>
+            </ng-container>
+  
+            <!-- Nom_bloc Column -->
+            <ng-container matColumnDef="nom_bloc">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom bloc </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom_bloc}} </td>
+            </ng-container>
+  
+            <!-- commune Concerné Column -->
+            <ng-container matColumnDef="nom_com">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Commune </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom_com}} </td>
+            </ng-container>
+  
+            <!-- nb_fkt_concerner Column -->
+            <ng-container matColumnDef="nb_fkt_concerner">
+              <th mat-header-cell *matHeaderCellDef> nb fkt concerner </th>
+              <td mat-cell *matCellDef="let row"> {{row.nb_fkt}} </td>
+            </ng-container>
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+              class="example-element-row" 
+              [class.example-expanded-row]="expandedElement === row"
+              (click)="onRowClickedBloc(row)">
+            </tr>
+        
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="6">Aucun enregistrement"</td>
+            </tr>
+          </table>
+        </div>
+      
+        <mat-paginator 
+          #blocPaginator 
+          [pageSizeOptions]="[5, 15, 25]" 
+          aria-label="Select page of pms" 
+          showFirstLastButtons
+        ></mat-paginator>
+        <h5>Details bloc zone</h5>
+        <div *ngIf = "isClickedBloc" class="table-container">
+          <table mat-table [dataSource]="dataSourceZone">
+
+            <!-- Code Bloc Column -->
+            <ng-container matColumnDef="code_bloc">
+              <th mat-header-cell *matHeaderCellDef> code_bloc </th>
+              <td mat-cell *matCellDef="let row"> {{row.id_bloc}} </td>
+            </ng-container>
+  
+            <!-- Nom_bloc Column -->
+            <ng-container matColumnDef="nom_bloc">
+              <th mat-header-cell *matHeaderCellDef> Nom bloc </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom_bloc}} </td>
+            </ng-container>
+  
+            <!-- commune Concerné Column -->
+            <ng-container matColumnDef="commune">
+              <th mat-header-cell *matHeaderCellDef> Commune </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom_com}} </td>
+            </ng-container>
+  
+            <!-- nb_beneficiaire Column -->
+            <ng-container matColumnDef="fkt">
+              <th mat-header-cell *matHeaderCellDef> fokontany </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom_fkt}}</td>
+            </ng-container>
+  
+            <!-- nb_fkt_concerner Column -->
+            <ng-container matColumnDef="km_responsable">
+              <th mat-header-cell *matHeaderCellDef> KM responsable </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom}} {{row.prenom}} </td>
+            </ng-container>
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumnsZone; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumnsZone;"
+              class="example-element-row" 
+              [class.example-expanded-row]="expandedElement === row"
+              (click)="onRowClickedBenef(row)">
+            </tr>
+        
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="4">Aucun enregistrement"</td>
+            </tr>
+          </table>
+        </div>
+      </div> 
     </mat-tab>
-    <mat-tab label="Beneficiaire-Bloc">
-      Liste association
+    <mat-tab label="Beneficiaire">
+      <h3>Liste bénéficiaire Bloc</h3>
+      <div class="container-matTab mat-elevation-z8">
+
+        <div class="demo-button-container">
+          <mat-form-field>
+            <mat-label>Filtre</mat-label>
+            <mat-select [(ngModel)]="selectedBloc" (ngModelChange)="applyFilterSelect($event, 'beneficiaire')">
+              <mat-option (click)="applyFilterTout('beneficiaire')" [value]="">tout</mat-option>
+              <mat-option *ngFor="let bloc of filterDataBloc" [value]="bloc">
+                {{ bloc }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="table-container">
+          <table mat-table [dataSource]="dataSourceBenef" matSort #benefSort="matSort">
+
+            <!-- Code Bloc Column -->
+            <ng-container matColumnDef="nom_bloc">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> nom_bloc </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom_bloc}} </td>
+            </ng-container>
+  
+            <!-- Nom_bloc Column -->
+            <ng-container matColumnDef="code_benef_bl">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> code benef </th>
+              <td mat-cell *matCellDef="let row"> {{row.code_benef_bl}} </td>
+            </ng-container>
+  
+            <!-- Nom Concerné Column -->
+            <ng-container matColumnDef="nom">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> nom </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom}} {{row.prenom}} </td>
+            </ng-container>
+  
+            <!-- sexe Column -->
+            <ng-container matColumnDef="sexe">
+              <th mat-header-cell *matHeaderCellDef> sexe </th>
+              <td mat-cell *matCellDef="let row"> {{row.sexe}} </td>
+            </ng-container>
+
+            <!-- surnom Column -->
+            <ng-container matColumnDef="surnom">
+              <th mat-header-cell *matHeaderCellDef> surnom </th>
+              <td mat-cell *matCellDef="let row"> {{row.surnom}} </td>
+            </ng-container>
+
+            <!-- cin Column -->
+            <ng-container matColumnDef="cin">
+              <th mat-header-cell *matHeaderCellDef> cin </th>
+              <td mat-cell *matCellDef="let row"> {{row.cin}} </td>
+            </ng-container>
+
+            <!-- commune Column -->
+            <ng-container matColumnDef="nom_com">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> commune </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom_com}} </td>
+            </ng-container>
+
+            <!-- fokontany Column -->
+            <ng-container matColumnDef="nom_fkt">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> fokontany </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom_fkt}} </td>
+            </ng-container>
+
+            <!-- nombre parcelle Column -->
+            <ng-container matColumnDef="nb_parcelle">
+              <th mat-header-cell *matHeaderCellDef> nb_parcelle </th>
+              <td mat-cell *matCellDef="let row"> {{row.nb_parce}} </td>
+            </ng-container>
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumnsBenef; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumnsBenef;"
+              class="example-element-row" 
+              [class.example-expanded-row]="expandedElement === row"
+              (click)="onRowClickedBloc(row)">
+            </tr>
+        
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="4">Aucun enregistrement"</td>
+            </tr>
+          </table>
+        </div>
+      
+        <mat-paginator 
+          #benefPaginator 
+          [pageSizeOptions]="[5, 15, 25]" 
+          aria-label="Select page of pms" 
+          showFirstLastButtons
+        ></mat-paginator>
+        <h5>Parcelle bloc bénéficiaire</h5>
+        <div *ngIf = "isClickedBenef" class="table-container">
+          <table mat-table [dataSource]="dataSourceParceBenef" matSort>
+
+            <!-- Code Bloc Column -->
+            <ng-container matColumnDef="nom_bloc">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> nom_bloc </th>
+              <td mat-cell *matCellDef="let row"> {{row.code_bloc}} </td>
+            </ng-container>
+  
+            <!-- code_benef Column -->
+            <ng-container matColumnDef="code_benef">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> code_benef </th>
+              <td mat-cell *matCellDef="let row"> {{row.fkt_association}} </td>
+            </ng-container>
+  
+            <!-- nom_benef Concerné Column -->
+            <ng-container matColumnDef="nom_benef">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> nom_benef </th>
+              <td mat-cell *matCellDef="let row"> {{row.commune}} </td>
+            </ng-container>
+  
+            <!-- code parcelle Column -->
+            <ng-container matColumnDef="code_parce">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> code_parce </th>
+              <td mat-cell *matCellDef="let row"> {{row.fkt}}</td>
+            </ng-container>
+  
+            <!-- lat Column -->
+            <ng-container matColumnDef="lat">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> lat </th>
+              <td mat-cell *matCellDef="let row"> {{row.km_responsable}} </td>
+            </ng-container>
+
+            <!-- nb_fkt_concerner Column -->
+            <ng-container matColumnDef="log">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> log </th>
+              <td mat-cell *matCellDef="let row"> {{row.km_responsable}} </td>
+            </ng-container>
+
+            <!-- superficie Column -->
+            <ng-container matColumnDef="superficie">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> superficie </th>
+              <td mat-cell *matCellDef="let row"> {{row.km_responsable}} </td>
+            </ng-container>
+
+            <!-- nb_culture Column -->
+            <ng-container matColumnDef="nb_culture">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> nb_culture </th>
+              <td mat-cell *matCellDef="let row"> {{row.km_responsable}} </td>
+            </ng-container>
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumnsParceBenef; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumnsParceBenef;"
+              class="example-element-row" 
+              [class.example-expanded-row]="expandedElement === row"
+              (click)="onRowBenefClicked(row)">
+            </tr>
+        
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="4">Aucun enregistrement"</td>
+            </tr>
+          </table>
+        </div>
+      </div> 
     </mat-tab>
-    <mat-tab label="Parcelle-Bloc">
+    <mat-tab label="Parcelle">
       <h1>Liste des Parcelle</h1>
+      <div class="demo-button-container">
+        <mat-form-field>
+          <mat-label>Filtre</mat-label>
+          <mat-select [(ngModel)]="selectedBloc" (ngModelChange)="applyFilterSelect($event, 'parcelle')">
+            <mat-option (click)="applyFilterTout('parcelle')" [value]="">tout</mat-option>
+            <mat-option *ngFor="let bloc of filterDataBloc" [value]="bloc">
+              {{ bloc }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="container-matTab mat-elevation-z8">
+        <table mat-table [dataSource]="dataSourceParcelle" matSort #parcelleSort="matSort">
+
+          <!-- code_parcelle Column -->
+          <ng-container matColumnDef="id_parce">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> code parcelle </th>
+            <td mat-cell *matCellDef="let row"> {{row.id_parce}} </td>
+          </ng-container>
+
+          <!-- Nom_bloc Column -->
+          <ng-container matColumnDef="nom_bloc">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> nom bloc </th>
+            <td mat-cell *matCellDef="let row"> {{row.nom_bloc}} </td>
+          </ng-container>
+
+          <!-- code_benef Column -->
+          <ng-container matColumnDef="code_benef_bl">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> code_benef </th>
+            <td mat-cell *matCellDef="let row"> {{row.code_benef_bl}} </td>
+          </ng-container>
+
+          <!-- nom_preom Column -->
+          <ng-container matColumnDef="nom">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> nom </th>
+            <td mat-cell *matCellDef="let row"> {{row.nom}} {{row.prenom}} </td>
+          </ng-container>
+
+          <!-- surnom Column -->
+          <ng-container matColumnDef="km_responsable">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> km Responsable </th>
+            <td mat-cell *matCellDef="let row"> </td>
+          </ng-container>
+
+          <!-- fokontany Column -->
+          <ng-container matColumnDef="fokontany">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> fokontany </th>
+            <td mat-cell *matCellDef="let row">  </td>
+          </ng-container>
+
+          <!-- lat Column -->
+          <ng-container matColumnDef="lat">
+            <th mat-header-cell *matHeaderCellDef> lat </th>
+            <td mat-cell *matCellDef="let row"> {{row.lat}} </td>
+          </ng-container>
+
+          <!-- log Column -->
+          <ng-container matColumnDef="log">
+            <th mat-header-cell *matHeaderCellDef> log </th>
+            <td mat-cell *matCellDef="let row"> {{row.log}} </td>
+          </ng-container>
+
+          <!-- superficie Column -->
+          <ng-container matColumnDef="superficie">
+            <th mat-header-cell *matHeaderCellDef> superficie </th>
+            <td mat-cell *matCellDef="let row"> {{row.superficie}} </td>
+          </ng-container>
+
+          <!-- nb_culture Column -->
+          <ng-container matColumnDef="nb_culture">
+            <th mat-header-cell *matHeaderCellDef> nb_culture </th>
+            <td mat-cell *matCellDef="let row"> </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsParcelle; sticky: true"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsParcelle;"
+            class="example-element-row" 
+            [class.example-expanded-row]="expandedElement === row"
+            (click)="onRowClickedBloc(row)">
+          </tr>
+      
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">Aucun enregistrement"</td>
+          </tr>
+        </table>
+      </div>
+      <mat-paginator 
+        #parcellePaginator 
+        [pageSizeOptions]="[5, 15, 25]" 
+        aria-label="Select page of pms" 
+        showFirstLastButtons
+    ></mat-paginator>
     </mat-tab>
   </mat-tab-group>
 </ion-content>
