Installation xlsx + @ionic-native/file + cordova-plugin-file pour l'exportation Excelle

--- a/src/app/pages/suivi_/suivi/suivi.page.html
+++ b/src/app/pages/suivi_/suivi/suivi.page.html
@@ -91,6 +91,9 @@
                   <button mat-raised-button (click)="onUpdate()" class="demo-button">
                     Modification
                   </button>
+                  <button mat-raised-button (click)="createExcel()" class="demo-button">
+                    Exporter xcel
+                  </button>
                 </div>
                 <div class="child-row-modifier1" *ngIf="isUpdated" style="padding-right: 10px;">
                   <button mat-raised-button (click)="onCancelSauvegarde()()" class="demo-button">
