--- a/src/app/pages/beneficiaire-bloc/beneficiaire-bloc.page.html
+++ b/src/app/pages/beneficiaire-bloc/beneficiaire-bloc.page.html
@@ -120,10 +120,7 @@
             </ng-container>
         
             <tr mat-header-row *matHeaderRowDef="displayedColumnsZone; sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumnsZone;"
-              class="example-element-row" 
-              [class.example-expanded-row]="expandedElement === row"
-              (click)="onRowClickedBenef(row)">
+            <tr mat-row *matRowDef="let row; columns: displayedColumnsZone;">
             </tr>
         
             <!-- Row shown when there is no matching data. -->
@@ -205,12 +202,18 @@
               <th mat-header-cell *matHeaderCellDef> nb_parcelle </th>
               <td mat-cell *matCellDef="let row"> {{row.nb_parce}} </td>
             </ng-container>
+            
+            <!-- nombre parcelle Column -->
+            <ng-container matColumnDef="sum_superficie">
+              <th mat-header-cell *matHeaderCellDef> sum_superficie </th>
+              <td mat-cell *matCellDef="let row"> {{row.sum_superficie}} </td>
+            </ng-container>
         
             <tr mat-header-row *matHeaderRowDef="displayedColumnsBenef; sticky: true"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumnsBenef;"
               class="example-element-row" 
               [class.example-expanded-row]="expandedElement === row"
-              (click)="onRowClickedBloc(row)">
+              (click)="onRowBenefClicked(row)">
             </tr>
         
             <!-- Row shown when there is no matching data. -->
@@ -233,57 +236,59 @@
             <!-- Code Bloc Column -->
             <ng-container matColumnDef="nom_bloc">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> nom_bloc </th>
-              <td mat-cell *matCellDef="let row"> {{row.code_bloc}} </td>
+              <td mat-cell *matCellDef="let row"> {{row.nom_bloc}} </td>
             </ng-container>
   
             <!-- code_benef Column -->
             <ng-container matColumnDef="code_benef">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> code_benef </th>
-              <td mat-cell *matCellDef="let row"> {{row.fkt_association}} </td>
+              <td mat-cell *matCellDef="let row"> {{row.code_benef_bl}} </td>
             </ng-container>
   
             <!-- nom_benef Concerné Column -->
             <ng-container matColumnDef="nom_benef">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> nom_benef </th>
-              <td mat-cell *matCellDef="let row"> {{row.commune}} </td>
+              <td mat-cell *matCellDef="let row"> {{row.nom}} {{row.prenom}} </td>
             </ng-container>
   
             <!-- code parcelle Column -->
             <ng-container matColumnDef="code_parce">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> code_parce </th>
-              <td mat-cell *matCellDef="let row"> {{row.fkt}}</td>
+              <td mat-cell *matCellDef="let row"> {{row.code_parce}}</td>
+            </ng-container>
+
+            <!-- ref_gps Column -->
+            <ng-container matColumnDef="ref_gps">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> ref_gps </th>
+              <td mat-cell *matCellDef="let row"> {{row.ref_gps}} </td>
             </ng-container>
   
             <!-- lat Column -->
             <ng-container matColumnDef="lat">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> lat </th>
-              <td mat-cell *matCellDef="let row"> {{row.km_responsable}} </td>
+              <td mat-cell *matCellDef="let row"> {{row.lat}} </td>
             </ng-container>
 
             <!-- nb_fkt_concerner Column -->
             <ng-container matColumnDef="log">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> log </th>
-              <td mat-cell *matCellDef="let row"> {{row.km_responsable}} </td>
+              <td mat-cell *matCellDef="let row"> {{row.log}} </td>
             </ng-container>
 
             <!-- superficie Column -->
             <ng-container matColumnDef="superficie">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> superficie </th>
-              <td mat-cell *matCellDef="let row"> {{row.km_responsable}} </td>
+              <td mat-cell *matCellDef="let row"> {{row.superficie}} </td>
             </ng-container>
 
             <!-- nb_culture Column -->
             <ng-container matColumnDef="nb_culture">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> nb_culture </th>
-              <td mat-cell *matCellDef="let row"> {{row.km_responsable}} </td>
+              <td mat-cell *matCellDef="let row"></td>
             </ng-container>
         
             <tr mat-header-row *matHeaderRowDef="displayedColumnsParceBenef; sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumnsParceBenef;"
-              class="example-element-row" 
-              [class.example-expanded-row]="expandedElement === row"
-              (click)="onRowBenefClicked(row)">
-            </tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumnsParceBenef;"></tr>
         
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
@@ -312,7 +317,7 @@
           <!-- code_parcelle Column -->
           <ng-container matColumnDef="id_parce">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> code parcelle </th>
-            <td mat-cell *matCellDef="let row"> {{row.id_parce}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.code_parce}} </td>
           </ng-container>
 
           <!-- Nom_bloc Column -->
@@ -341,8 +346,8 @@
 
           <!-- fokontany Column -->
           <ng-container matColumnDef="fokontany">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> fokontany </th>
-            <td mat-cell *matCellDef="let row">  </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>fokontany</th>
+            <td mat-cell *matCellDef="let row"></td>
           </ng-container>
 
           <!-- lat Column -->
@@ -366,7 +371,7 @@
           <!-- nb_culture Column -->
           <ng-container matColumnDef="nb_culture">
             <th mat-header-cell *matHeaderCellDef> nb_culture </th>
-            <td mat-cell *matCellDef="let row"> </td>
+            <td mat-cell *matCellDef="let row"></td>
           </ng-container>
       
           <tr mat-header-row *matHeaderRowDef="displayedColumnsParcelle; sticky: true"></tr>
