modification production de semence + integration image

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -30,6 +30,9 @@
       <button mat-list-item class="btn" (click)="doMenu(activite.intitule)"> {{ activite.description }} </button>
     </mat-action-list>   
   </div> 
+  <mat-action-list class="list-btn">
+    <button mat-list-item class="btn" (click)="goToRoot()">Synchronisation</button>
+  </mat-action-list>   
   <!--<ion-button expand="full" (click)="doMenu()">PRODUCTION DE SEMENCE</ion-button>
   <ion-button expand="full" (click)="doMenu()">GESTION DE BLOC</ion-button>
   <ion-button expand="full" (click)="doMenu()">CHAMPS ECOLE DES PAYSANS RELAIS</ion-button>-->
